Add support for APInf auth token login
