# space/routes/auth.py
@@ -1,5 +1,7 @@
 from flask import Response
 from connexion import request
+
+from space.integration import apinf
 from space.models import User, AuthToken
 
 
@@ -10,6 +12,21 @@ def login():
         return Response(status=404)
     elif not user.check_password(body["password"]):
         return Response(status=401)
+    return {"token": user.generate_auth_token(), "username": user.name}
+
+
+def login_apinf_token():
+    body = request.json
+    (username, email) = apinf.check_token(body["user_id"], body["auth_token"])
+    if not username:
+        return Response(status=401)
+
+    username = "apinf:%s" % username
+    user = User.query.get(username)
+    if not user:
+        # Email left out because of uniqueness problems
+        user = User(name=username, hashed_password="", email="")
+        user.insert()
     return {"token": user.generate_auth_token(), "username": user.name}
 
 
@@ -42,7 +59,14 @@ def ping():
 
 def register():
     body = request.json
-    user = User(name=body["username"], email=body["email"])
+    username = body["username"]
+    if ":" in username:
+        return Response(status=400)
+    email = body["email"]
+    if "@" not in email:
+        return Response(status=400)
+
+    user = User(name=username, email=email)
     user.set_password(body["password"])
     user.insert()
     return {"token": user.generate_auth_token(), "username": user.name}
